gotify/deployment-amd64.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify-amd64
  namespace: tedy
  labels:
    app: gotify
spec:
  replicas: 0
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      containers:
        - name: gotify
          resources:
            limits:
              cpu: "200m"
              memory: "100M"
            requests:
              cpu: "100m"
              memory: "50M"
          image: gotify/server:latest
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/gotify/
            - name: storage
              mountPath: /data
          securityContext:
            privileged: true
      volumes:
        - name: config
          configMap:
            name: gotify
        - name: storage
          persistentVolumeClaim:
            claimName: gotify
