gotify/deployment-arm.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify-armv7
  namespace: tedy
  labels:
    app: gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: arm
      containers:
        - name: gotify
          resources:
            limits:
              cpu: "200m"
              memory: "100M"
            requests:
              cpu: "100m"
              memory: "50M"
          image: gotify/server-arm7:latest
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/gotify/
            - name: storage
              mountPath: /data
          securityContext:
            privileged: true
      volumes:
        - name: config
          configMap:
            name: gotify
        - name: storage
          persistentVolumeClaim:
            claimName: gotify
