gotify/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gotify-service
  namespace: tedy
spec:
  selector:
    app: gotify
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
