gotify/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gotify-ingress
  namespace: tedy
spec:
  rules:
    - host: gotify.stoicatedy.ovh
      http:
        paths:
          - path: /
            backend:
              serviceName: gotify-service
              servicePort: 80
